comment out bot initialization to test memory issues